@@ -1,5 +1,10 @@
 2001-08-20  Michael Meeks  <michael@ximian.com>
 
+	* bonobo/bonobo-ui-node.c (bonobo_ui_node_from_file):
+	update to unlink root node as well, and strip earlier.
+
+2001-08-20  Michael Meeks  <michael@ximian.com>
+
 	* tests/test-ui.c (main): Make the 'Insensitive' item
 	insensitive - woah !
 
